# Yanmo

./: .gitignore  CONTRIBUTING.md  README.ja.md  README.md  README.zh-CN.md  README.zh-Hant.md  SECURITY.md  findings.md  progress.md  pyproject.toml  task_plan.md  研墨.spec
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
backend/: main.py
backend/api/: gateway.py
backend/core/: config.py  engine.py  event_bus.py  llm_router.py  scheduler.py  security.py  storage.py
backend/plugins/evaluator/: evaluate.py  gap_analyzer.py  plugin.py  plugin.toml  routes.py
backend/plugins/formula/: plugin.py  plugin.toml  routes.py  verify.py
backend/plugins/literature/: citation_classifier.py  citation_graph.py  dedup.py  fetcher.py  plugin.py  plugin.toml  routes.py  summarizer.py  systematic_review.py
backend/plugins/literature/crawlers/: __init__.py  arxiv.py  dblp.py  semantic_scholar.py
backend/plugins/paper_writer/: citation.py  deai.py  outline.py  plugin.py  plugin.toml  routes.py
backend/plugins/term_advisor/: advisor.py  plugin.py  plugin.toml  routes.py
distribution/: flatpak.yml  yanmo.rb
docs/superpowers/plans/: 2026-05-17-research-assistant-plan.md
docs/superpowers/specs/: 2026-05-17-research-assistant-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/core/: SidePanel.tsx  TabBar.tsx  Workbench.tsx  api.ts  pluginRegistry.ts  types.ts
frontend/src/plugins/evaluator/: EvaluatorPanel.tsx
frontend/src/plugins/formula/: FormulaPanel.tsx
frontend/src/plugins/literature/: LiteraturePanel.tsx
frontend/src/plugins/paper-writer/: PaperWriterPanel.tsx
frontend/src/plugins/term-advisor/: TermAdvisorPanel.tsx
frontend/src/shared/: ChatWindow.tsx  SecurityBadge.tsx  Settings.tsx
frontend/src/styles/: theme.css
frontend_qt/: build.py  main.py  main_window.py
frontend_qt/tabs/: evaluator.py  formula.py  literature.py  paper_writer.py  term_advisor.py
frontend_qt/widgets/: chat.py  theme.py
plugin_schema/: API.md
scripts/: install.sh
tests/: test_smoke.py
tests/core/: test_config.py  test_engine.py  test_event_bus.py  test_llm_router.py  test_security.py  test_storage.py
tests/plugins/: test_evaluator.py  test_formula.py  test_literature.py  test_paper_writer.py  test_term_advisor.py
