[project]
name = "yanmo"
version = "0.1.1"
description = "研墨 · 本地优先的科研助手"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "sympy>=1.13.0",
    "scipy>=1.14.0",
    "feedparser>=6.0.0",
    "aiohttp>=3.9.0",
    "ollama>=0.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "PySide6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["backend", "backend.*", "frontend_qt", "frontend_qt.*"]
