[package]
name = "yanmo"
version = "0.1.0"
description = "研墨 · 本地优先的科研助手"
authors = ["you"]
edition = "2021"

[lib]
name = "yanmo_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
